--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     container_name: sis-pm-webserver
     environment:
-      - USB_DEVICE="/dev/bus/usb/001/001"
+      - USB_DEVICE=/dev/bus/usb/001/001
     build: .
     devices:
       - "${USB_DEVICE}"
