--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: "3.5"
 services:
   app:
     container_name: sis-pm-webserver
-    build: .
+    build:
+      context: .
+      args:
+        - PORT=3000
     devices:
       - /dev/bus/usb/001
     ports:
