--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
 #      args:
 #        - PORT=3000
     devices:
+#     Set the tight put to device
       - /dev/bus/usb/001
     ports:
       - "3000:3000"
